fixed content shifting

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -2,7 +2,6 @@
   background-color: black;
   position: relative;
   margin: 0 auto;
-  min-height: 100vh;
   padding: 20px;
   text-align: center;
   /* override bootstrap */
@@ -21,38 +20,15 @@ nav, li, ul {
   text-align: center;
   align-items: center;
   justify-content: space-evenly;
-  font-size: calc(10px + 2vmin);
+  font-size: 20px;
 }
 
 .transparent {
   color: transparent;
 }
 
-.App-logo {
-  height: 50vmin, ;
-  width: 50vmin;
-  pointer-events: none;
-}
-
-.App-logo-small {
-  height: 50px, ;
-  width: 50px;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo-small {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-home {
+main {
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  /* font-size: calc(10px + 2vmin); */
-  color: white;
 }
 
 .App-link {
@@ -60,7 +36,6 @@ nav, li, ul {
   text-decoration: none;
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
-  /* font-size: calc(30px + 1vmin); */
 }
 
 .App-link:hover {
@@ -83,11 +58,6 @@ nav, li, ul {
   color: white;
   width: 130px;
   height: 200px;
-  /* text-align: center;
-  border: 1px double;
-  border-radius: 50%; */
-  /* margin-bottom: 20px; */
-
 }
 
 /* animations: */
@@ -135,8 +105,6 @@ nav, li, ul {
   }
 }
 
-/* Project card */
-
 /* ProjectNav */
 .sticky-nav {
   position: sticky;
@@ -159,14 +127,12 @@ nav, li, ul {
   border: 2px solid white;
   border-radius: 25px;
   margin-right: 10px;
-
   font-size: 25px;
   border: dotted;
   border-radius: 50px;
   padding: 5px 10px;
   margin-left: 5px;
   margin-right: 5px;
-
 }
 
 active {
@@ -174,20 +140,20 @@ active {
 }
 
 @media screen and (min-width: 992px) {
-.project-title-desktop {
-display: block;
-font-size: 20px;
-}
-.project-id-mobile {
-display: none;
-}
+  .project-title-desktop {
+  display: block;
+  font-size: 20px;
+  }
+  .project-id-mobile {
+  display: none;
+  }
 }
 
 @media screen and (max-width: 992px) {
-.project-title-desktop {
-display: none;
-}
-.project-id-mobile {
-display: block;
-}
+  .project-title-desktop {
+  display: none;
+  }
+  .project-id-mobile {
+  display: block;
+  }
 }
